translation-tool/inputs/source_meta/objects/Customer_KB__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <page>KB_Customer</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <page>KB_Customer</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <page>KB_Customer</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>KB_Customer</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Document_2__c</fullName>
        <label>Document 2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_3__c</fullName>
        <label>Document 3</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_4__c</fullName>
        <label>Document 4</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KB_Title__c</fullName>
        <label>KB Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cleaned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cleaned</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer KB</label>
    <pluralLabel>Customer KB</pluralLabel>
</CustomObject>